# Harmonium

./: README.md  watch.sh
assets/logo/: logo.blend  logo.blend1
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  utils.rs
