[package]
name = "hello-tauri-webdriver"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
anyhow = "1.0.50"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.20", features = ["full"] }
tauri = { version = "1", features = ["api-all", "custom-protocol"] }

[profile.release]
incremental = false
codegen-units = 1
panic = "abort"
opt-level = "s"
lto = true
